Fix XED search path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,30 @@ set(REMILL_INSTALL_BIN_DIR "${CMAKE_INSTALL_BINDIR}" CACHE PATH "Directory in wh
 set(REMILL_INSTALL_INCLUDE_DIR "${CMAKE_INSTALL_INCLUDEDIR}/remill" CACHE PATH "Directory in which remill headers will be installed")
 set(REMILL_INSTALL_SHARE_DIR "${CMAKE_INSTALL_DATADIR}" CACHE PATH "Directory in which remill cmake files will be installed")
 
+
+
+# cxx-common
+if(DEFINED ENV{TRAILOFBITS_LIBRARIES})
+  set(LIBRARY_REPOSITORY_ROOT $ENV{TRAILOFBITS_LIBRARIES}
+    CACHE PATH "Location of cxx-common libraries."
+  )
+endif()
+
+if(DEFINED LIBRARY_REPOSITORY_ROOT)  
+  set(TOB_CMAKE_INCLUDE "${LIBRARY_REPOSITORY_ROOT}/cmake_modules/repository.cmake")
+  if(NOT EXISTS "${TOB_CMAKE_INCLUDE}")
+    message(FATAL_ERROR "The library repository could not be found!")
+  endif()
+
+  include("${TOB_CMAKE_INCLUDE}")
+
+  message(STATUS "cxx-common")
+  message(STATUS $ENV{TRAILOFBITS_LIBRARIES})
+
+else()
+  message(STATUS "Using system libraries")
+endif()
+
 #
 # libraries
 #
@@ -89,10 +113,13 @@ endif()
 message(STATUS "LLVM Libraries: ${LLVM_LIBRARIES}")
 
 # Intel XED
-find_package(XED CONFIG REQUIRED)
+find_package(XED REQUIRED)
 add_library(thirdparty_xed INTERFACE)
+target_include_directories(thirdparty_xed SYSTEM INTERFACE
+  ${XED_INCLUDE_DIRS}
+)
 target_link_libraries(thirdparty_xed INTERFACE
-  XED::XED
+  ${XED_LIBRARIES}
 )
 
 # Google glog module
